--- a/centos_7/Dockerfile
+++ b/centos_7/Dockerfile
@@ -1,10 +1,11 @@
 FROM pycontribs/centos:7
 RUN true && \
-    yum -y install git && \
+    yum -y install git sshpass && \
     yum -y clean all && \
     true
 RUN true && \
     pip install --upgrade pip \
     pip install ansible \
     true
+RUN echo 'LANG="ja_JP.UTF-8" > /etc/locale.conf'
 CMD ["/sbin/init"]
