--- a/centos_7/Dockerfile
+++ b/centos_7/Dockerfile
@@ -1,5 +1,6 @@
 FROM pycontribs/centos:7
 RUN true && \
+    yum -y update && \
     yum -y install git sshpass && \
     yum -y clean all && \
     true
@@ -7,5 +8,8 @@ RUN true && \
     pip install --upgrade pip \
     pip install ansible \
     true
-RUN echo 'LANG="ja_JP.UTF-8" > /etc/locale.conf'
+RUN localedef -f UTF-8 -i ja_JP ja_JP.UTF-8
+ENV LANG="ja_JP.UTF-8" \
+    LANGUAGE="ja_JP:ja" \
+    LC_ALL="ja_JP.UTF-8"
 CMD ["/sbin/init"]
